--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8 || ~5.0"
+        "phpunit/phpunit": "~5.4"
     },
     "autoload": {
         "psr-4": {
