--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "http://flow.neos.io",
     "license": "MIT",
     "require": {
-        "php": ">=5.5.0"
+        "php": "~7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.4"
