--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "http://flow.neos.io",
     "license": "MIT",
     "require": {
-        "php": "^7.3 || ^8.0"
+        "php": "^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.1"
